--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,17 @@
 **/.env
 **/.eslintcache
 .vscode/
+
+node_modules/**/*
+.expo/*
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
+.DS_Store
