--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/enzyme": "^3.10.8",
+    "@types/jest": "^26.0.20",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "jest": "^26.6.3",
     "typescript": "~4.0.0"
   },
   "private": true
