--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "expo": "~40.0.0",
