--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "expo": "~40.0.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/axios": "^0.14.0",
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.20",
     "@types/react": "~16.9.35",
