Category Service and Component tests (#8)
* init frontend

* gitignore

* gitignore

* deleted myapp

* changes

* initial

* npm packets

* initialized project

* test for categoryService

* Added compontent unit tests

* categoryFeatures component tests are finished

Co-authored-by: Emily484 <63012821+Emily484@users.noreply.github.com>
Co-authored-by: Madhavi Thurlapati <madhavi.thurlapati@revature.net>
Co-authored-by: Emma (Yuqing) Wang <wangyuqingxiao@gmail.com>
Co-authored-by: Cynth <cynthia.enciso28@gmail.com>
Co-authored-by: nina.n.code <nina.n.code@revature.net>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+**/node_modules/
+**/coverage/
+**/*.log
+**/build/**
+**/.vscode
+**/.env
+**/.eslintcache
+.vscode/
+
 node_modules/**/*
 .expo/*
 npm-debug.*
