--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_SERVER_URI=https://caliber2-mock.revaturelabs.com:443/mock/training
+CALIBER_URI=https://caliber2-mock.revaturelabs.com:443/mock/training/
