--- a/package.json
+++ b/package.json
@@ -32,23 +32,26 @@
   },
   "homepage": "https://github.com/913-RichardOrr/caliber-mobile#readme",
   "dependencies": {
-    "enzyme": "^3.11.0",
-    "firebase": "^8.2.7",
-    "jest": "^26.6.3",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "aws-amplify": "^3.3.14",
     "axios": "^0.21.1",
     "babel-preset-es2015": "^6.24.1",
+    "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.2.7",
+    "jest": "^26.6.3",
     "jsdom-global": "^3.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-i18n": "^2.0.15",
     "react-native-pixel-perfect": "^1.0.2",
@@ -58,6 +61,7 @@
     "react-native-web": "^0.15.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
