added user states

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.21.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "expo": "~40.0.0",
