--- a/package.json
+++ b/package.json
@@ -32,9 +32,6 @@
   },
   "homepage": "https://github.com/913-RichardOrr/caliber-mobile#readme",
   "dependencies": {
-    "enzyme": "^3.11.0",
-    "firebase": "^8.2.7",
-    "jest": "^26.6.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
@@ -42,9 +39,12 @@
     "aws-amplify": "^3.3.14",
     "axios": "^0.21.1",
     "babel-preset-es2015": "^6.24.1",
+    "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.2.7",
+    "jest": "^26.6.3",
     "jsdom-global": "^3.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -52,6 +52,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-i18n": "^2.0.15",
     "react-native-pixel-perfect": "^1.0.2",
+    "react-native-popup-menu": "^0.15.10",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
