--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
   },
   "homepage": "https://github.com/913-RichardOrr/caliber-mobile#readme",
   "dependencies": {
-    "enzyme": "^3.11.0",
     "firebase": "^8.2.7",
-    "jest": "^26.6.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
@@ -42,10 +40,8 @@
     "aws-amplify": "^3.3.14",
     "axios": "^0.21.1",
     "babel-preset-es2015": "^6.24.1",
-    "enzyme-adapter-react-16": "^1.15.6",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
-    "jsdom-global": "^3.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -62,13 +58,13 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "@types/enzyme": "^3.10.8",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@babel/preset-env": "^7.12.11",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "@types/axios": "^0.14.0",
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.20",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
@@ -79,9 +75,10 @@
     "@types/redux-thunk": "^2.1.0",
     "babel-jest": "^26.6.3",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.1",
     "jest": "^26.6.3",
     "jest-enzyme": "^7.1.2",
-    "jsdom": "^16.4.0",
     "typescript": "~4.0.0"
   },
   "private": true
