--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-<<<<<<< HEAD
-  "dependencies": {
-    "react": "^16.8.3"
-  }
-=======
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "jest": "^26.6.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -22,11 +19,11 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/jest": "^26.0.20",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "typescript": "~4.0.0"
   },
   "private": true
->>>>>>> efae0e6c85109cfd86f0bd0a28d9f99c90bce3d4
 }
