--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/assetsTransformer.js",
       "\\.(css|less)$": "<rootDir>/assetsTransformer.js"
-    }
+    },
+    "__commentForTransformIgnorePatterns": "add your node module before the second closing parentheses from the end with a pipe before.", 
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|caliber-mobile|@react-native-picker/picker|react-native-gesture-handler)/)"
+    ]
   },
   "repository": {
     "type": "git",
