--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watch"
+    "test": "jest"
   },
   "jest": {
     "preset": "react-native",
