--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|@react-native-[a-z]*|react-native-[a-z]*|react-native-[a-z]*-[a-z]*|@expo)/)"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
