--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|@react-native-[a-z]*|react-native-[a-z]*|react-native-[a-z]*-[a-z]*|@expo)/)"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -55,7 +58,6 @@
     "@react-navigation/stack": "^5.12.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "aws-amplify": "^3.3.14",
-    "axios": "^0.21.1",
     "babel-preset-es2015": "^6.24.1",
     "enzyme-adapter-react-16": "^1.15.6",
     "expo": "~40.0.0",
@@ -83,10 +85,6 @@
     "@testing-library/user-event": "^12.7.0",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@babel/preset-env": "^7.12.11",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.20",
     "@types/react": "~16.9.35",
