--- a/package.json
+++ b/package.json
@@ -87,9 +87,9 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "@types/axios": "^0.14.0",
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.20",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
@@ -97,9 +97,11 @@
     "@types/react-native-i18n": "^2.0.0",
     "@types/react-redux": "^7.1.15",
     "@types/redux": "^3.6.0",
+    "@types/redux-mock-store": "^1.0.2",
     "@types/redux-thunk": "^2.1.0",
     "babel-jest": "^26.6.3",
     "jest-enzyme": "^7.1.2",
+    "redux-mock-store": "^1.5.4",
     "typescript": "~4.0.0"
   },
   "private": true
