--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-alphabet-sectionlist": "0.0.4",
     "react-native-alphabetlistview": "^0.3.1",
     "react-native-dynamic-search-bar": "^2.0.0",
     "react-native-elements": "^3.2.0",
@@ -83,6 +84,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-search-filter": "^0.1.5",
+    "react-native-section-alphabet-list": "^2.0.3",
     "react-native-tab-view": "^2.15.2",
     "react-native-toast-notification": "^1.1.2",
     "react-native-web": "^0.15.0",
