--- a/package.json
+++ b/package.json
@@ -50,21 +50,21 @@
   },
   "homepage": "https://github.com/913-RichardOrr/caliber-mobile#readme",
   "dependencies": {
-    "axios": "^0.21.1",
-    "enzyme": "^3.11.0",
-    "firebase": "^8.2.7",
-    "jest": "^26.6.3",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-picker/picker": "^1.9.11",
+    "@react-native-picker/picker": "1.9.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "aws-amplify": "^3.3.14",
+    "axios": "^0.21.1",
     "babel-preset-es2015": "^6.24.1",
     "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.2.7",
+    "jest": "^26.6.3",
     "jsdom-global": "^3.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
