--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
   },
   "homepage": "https://github.com/913-RichardOrr/caliber-mobile#readme",
   "dependencies": {
-    "firebase": "^8.2.7",
     "@material-ui/core": "^4.11.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "^1.9.11",
@@ -67,6 +66,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.2.7",
     "jest": "^26.6.3",
     "jsdom-global": "^3.0.2",
     "react": "16.13.1",
@@ -86,6 +86,7 @@
     "react-native-search-filter": "^0.1.5",
     "react-native-section-alphabet-list": "^2.0.3",
     "react-native-tab-view": "^2.15.2",
+    "react-native-table-component": "^1.2.1",
     "react-native-toast-notification": "^1.1.2",
     "react-native-web": "^0.15.0",
     "react-redux": "^7.2.2",
@@ -107,6 +108,7 @@
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "@types/react-native-i18n": "^2.0.0",
+    "@types/react-native-table-component": "^1.2.0",
     "@types/react-redux": "^7.1.15",
     "@types/redux": "^3.6.0",
     "@types/redux-mock-store": "^1.0.2",
