--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "babel-jest": "^26.6.3",
     "enzyme": "^3.11.0",
     "jest-enzyme": "^7.1.2",
+    "jsdom": "^16.4.0",
     "redux-mock-store": "^1.5.4",
     "typescript": "~4.0.0"
   },
